// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserAccount page should correctly render the component which contains profile data 1`] = `
<section
  className="pf-c-page__main-section pf-m-light pf-m-fill"
>
  <div
    className="pf-l-stack pf-m-gutter"
  >
    <div
      className="pf-l-stack__item"
    >
      <h1
        className="pf-c-title pf-m-2xl"
      >
        Account
      </h1>
      <p
        className=""
        data-pf-content={true}
      >
        This is where you can view and edit your account information for Product name.
      </p>
    </div>
    <div
      className="pf-l-stack__item pf-m-fill"
    >
      <form
        className="pf-c-form pf-m-limit-width"
        noValidate={true}
      >
        <div
          className="pf-c-form__group"
        >
          <div
            className="pf-c-form__group-label"
          >
            <label
              className="pf-c-form__label"
              htmlFor="form-group-login"
            >
              <span
                className="pf-c-form__label-text"
              >
                Login
              </span>
            </label>
             
          </div>
          <div
            className="pf-c-form__group-control"
          >
            <input
              aria-invalid={false}
              aria-label="readonly login"
              className="pf-c-form-control"
              disabled={true}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              readOnly={false}
              required={false}
              type="text"
              value="Johnny"
            />
            
          </div>
        </div>
        <div
          className="pf-c-form__group"
        >
          <div
            className="pf-c-form__group-label"
          >
            <label
              className="pf-c-form__label"
              htmlFor="form-group-email"
            >
              <span
                className="pf-c-form__label-text"
              >
                Email
              </span>
            </label>
             
          </div>
          <div
            className="pf-c-form__group-control"
          >
            <input
              aria-invalid={false}
              aria-label="readonly email"
              className="pf-c-form-control"
              disabled={true}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              readOnly={false}
              required={false}
              type="text"
              value="johndoe@test.com"
            />
            
          </div>
        </div>
        <div
          className="pf-c-form__group"
        >
          <div
            className="pf-c-form__group-label"
          >
            <label
              className="pf-c-form__label"
              htmlFor="form-group-first-name"
            >
              <span
                className="pf-c-form__label-text"
              >
                First Name
              </span>
            </label>
             
          </div>
          <div
            className="pf-c-form__group-control"
          >
            <input
              aria-invalid={false}
              aria-label="readonly first name"
              className="pf-c-form-control"
              disabled={true}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              readOnly={false}
              required={false}
              type="text"
              value="John"
            />
            
          </div>
        </div>
        <div
          className="pf-c-form__group"
        >
          <div
            className="pf-c-form__group-label"
          >
            <label
              className="pf-c-form__label"
              htmlFor="form-group-last-name"
            >
              <span
                className="pf-c-form__label-text"
              >
                Last Name
              </span>
            </label>
             
          </div>
          <div
            className="pf-c-form__group-control"
          >
            <input
              aria-invalid={false}
              aria-label="readonly last name"
              className="pf-c-form-control"
              disabled={true}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              readOnly={false}
              required={false}
              type="text"
              value="Doe"
            />
            
          </div>
        </div>
      </form>
    </div>
  </div>
</section>
`;

exports[`UserAccount page should correctly render the component without profile data 1`] = `
<section
  className="pf-c-page__main-section pf-m-light pf-m-fill"
>
  <div
    className="pf-l-stack pf-m-gutter"
  >
    <div
      className="pf-l-stack__item"
    >
      <h1
        className="pf-c-title pf-m-2xl"
      >
        Account
      </h1>
      <p
        className=""
        data-pf-content={true}
      >
        This is where you can view and edit your account information for test.
      </p>
    </div>
    <div
      className="pf-l-stack__item pf-m-fill"
    >
      <form
        className="pf-c-form pf-m-limit-width"
        noValidate={true}
      >
        <div
          className="pf-c-form__group"
        >
          <div
            className="pf-c-form__group-label"
          >
            <label
              className="pf-c-form__label"
              htmlFor="form-group-login"
            >
              <span
                className="pf-c-form__label-text"
              >
                Login
              </span>
            </label>
             
          </div>
          <div
            className="pf-c-form__group-control"
          >
            <input
              aria-invalid={false}
              aria-label="readonly login"
              className="pf-c-form-control"
              disabled={true}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              readOnly={false}
              required={false}
              type="text"
              value=""
            />
            
          </div>
        </div>
        <div
          className="pf-c-form__group"
        >
          <div
            className="pf-c-form__group-label"
          >
            <label
              className="pf-c-form__label"
              htmlFor="form-group-email"
            >
              <span
                className="pf-c-form__label-text"
              >
                Email
              </span>
            </label>
             
          </div>
          <div
            className="pf-c-form__group-control"
          >
            <input
              aria-invalid={false}
              aria-label="readonly email"
              className="pf-c-form-control"
              disabled={true}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              readOnly={false}
              required={false}
              type="text"
              value=""
            />
            
          </div>
        </div>
        <div
          className="pf-c-form__group"
        >
          <div
            className="pf-c-form__group-label"
          >
            <label
              className="pf-c-form__label"
              htmlFor="form-group-first-name"
            >
              <span
                className="pf-c-form__label-text"
              >
                First Name
              </span>
            </label>
             
          </div>
          <div
            className="pf-c-form__group-control"
          >
            <input
              aria-invalid={false}
              aria-label="readonly first name"
              className="pf-c-form-control"
              disabled={true}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              readOnly={false}
              required={false}
              type="text"
              value=""
            />
            
          </div>
        </div>
        <div
          className="pf-c-form__group"
        >
          <div
            className="pf-c-form__group-label"
          >
            <label
              className="pf-c-form__label"
              htmlFor="form-group-last-name"
            >
              <span
                className="pf-c-form__label-text"
              >
                Last Name
              </span>
            </label>
             
          </div>
          <div
            className="pf-c-form__group-control"
          >
            <input
              aria-invalid={false}
              aria-label="readonly last name"
              className="pf-c-form-control"
              disabled={true}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              readOnly={false}
              required={false}
              type="text"
              value=""
            />
            
          </div>
        </div>
      </form>
    </div>
  </div>
</section>
`;
